--- a/style.css
+++ b/style.css
@@ -35,3 +35,26 @@ h1 {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+/* Images */
+
+.image-container {
+  margin: 10px 30%;
+}
+
+.image-container img {
+  width: 100%;
+  margin-top: 5px;
+}
+
+/* Media Queries */
+
+@media screen and (max-width: 600px) {
+  h1 {
+    font-size: 20px;
+  }
+
+  .image-container {
+    margin: 10px;
+  }
+}
